fix(frontend): Form overflowing on small screens

--- a/frontend/src/static/form.css
+++ b/frontend/src/static/form.css
@@ -3,9 +3,10 @@ form {
 	width: max-content;
 	align-items: center;
 	row-gap: 5px;
+	column-gap: 1em;
 
 	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: auto auto;
 }
 
 input {
